--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup deno
         uses: denoland/setup-deno@main
         with:
-      	  deno-version: v1.10.2
+      	  deno-version: v1.x
       # The third step is a Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
       - name: Fetch data 
         uses: githubocto/flat@v2
